# ProjetoTCC

./: README.md  detalhada.py  fashion_insights.json  hashtags.py  instagram.py  keywords.py  main.py  marcas.py  pyproject.toml  testar.py
powerbi_data/: metadata.txt  relationships_info.csv
